Fix the 'Report bug' button being always disabled

Summary:
The commit d4ae04a7 has changed #define of HAVE_XMLRPCLCIENT
to #cmakedefine01 - since HAVE_XMLRPCCLIENT is not defined anywhere
in the CMakeFiles.txt, this lead to the 'Report bug' button being
unconditionally disabled at compile time.

Since KXmlRpcClient is a REQUIRED dependency (and has been for a while),
we can just remove the macro altogether.

BUG: 406606
FIXED-IN: 5.16.0

Test Plan: The 'Report bug' button is enabled

Reviewers: dfaure

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21527